--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <!-- <title>chat | Doot - Angular Admin & Dashboard Template</title> -->
   <title>Chirp</title>
-  <base href="chirpandchat.github.io">
+  <base href="/">
   <!-- <base href="/doot/angular/light/"> -->
   <!-- <base href="/doot/angular/dark/"> -->
   <!-- <base href="/doot/angular/rtl/"> -->
