--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html lang="en" dir data-critters-container>
 
 <head>
-  <meta charset="utf-8" http-equiv="refresh" content="0; URL='./index.html'">
+  <meta charset="utf-8" http-equiv="refresh" content="0; URL='../../index.html'">
 </head>
 
 <body>
