--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir data-critters-container>
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="utf-8" http-equiv="refresh" content="0; URL='../../index.html'">
   <!-- <title>chat | Doot - Angular Admin & Dashboard Template</title> -->
   <title>Chirp</title>
   <base href="/">
